Fixed top nav a little, aligned to the right

--- a/app/assets/stylesheets/bingo_template/responsive.scss
+++ b/app/assets/stylesheets/bingo_template/responsive.scss
@@ -10,24 +10,26 @@
 	}
 		#main-menu .navbar-collapse.collapse {
 			display: inline-block !important;
+			float: right;
 		}
-	
+
 }
 
 /* Medium Devices Styles Starts */
 
 @media (min-width: 992px) and (max-width: 1199px) {
-	
+
 /* Main Menu Styles Starts */
 
 	#main-menu .container {
 		padding-left: 0;
 		padding-right: 0;
-	}	
+	}
 	#main-menu .navbar-collapse.collapse {
 		display: inline-block !important;
-	}	
-		
+		float: right;
+	}
+
 /* Products Box Styles */
 
 	.product-col.list .image {
@@ -36,12 +38,12 @@
 	.product-col .btn-cart {
 		margin-top: 5px;
 	}
-	
-/* Product Carousel Styles Starts */	
+
+/* Product Carousel Styles Starts */
 
 	.product-carousel .owl-controls .owl-buttons .owl-prev {
 		left: 89%;
-	}		
+	}
 
 /* Footer Links Styles Starts */
 
@@ -50,7 +52,7 @@
 	}
 
 /* Copyright Styles Starts */
-	
+
 	.copyright {
 		font-size: 13px;
 	}
@@ -73,19 +75,20 @@
 	}
 	#main-menu .navbar-collapse.collapse {
 		display: inline-block !important;
+		float: right;
 	}
 	#main-menu .navbar-nav > li > a {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
-	
+
 /* Products Box Styles */
 
 	.product-col.list .image {
 		padding: 40px 30px 10px 0;
-	}	
-	
-/* Product Carousel Styles Starts */	
+	}
+
+/* Product Carousel Styles Starts */
 
 	.product-carousel .row {
 		margin-left: -3px;
@@ -104,24 +107,24 @@
     }
 	.product-carousel .owl-controls .owl-buttons .owl-prev {
 		left: 86%;
-	}		
-	
+	}
+
 /* Side Products Lists Styles Starts */
 
 	.side-products-list h5,
 	.side-products-list .price {
 		float: none;
 	}
-	
+
 /* Pagination Styles Starts */
 
 	.pagination {
-		margin-bottom: 15px; 
+		margin-bottom: 15px;
 	}
-	.results {	
+	.results {
 		padding-top: 5px;
 	}
-	
+
 /* Footer Links Styles Starts */
 
 	#footer-area .foot-sm-links {
@@ -130,25 +133,25 @@
 	.footer-links h5 {
 		margin: 10px 0;
 	}
-	
+
 /* Copyright Styles Starts */
-	
+
 	.copyright {
 		font-size: 12px;
 	}
-		.copyright p.pull-left, 
+		.copyright p.pull-left,
 		.copyright ul {
 			text-align: center;
 			float: none !important;
 		}
-		
+
 /* Genric Styles Starts */
 
 	.img-center-sm {
 		margin-left: auto;
 		margin-right: auto;
-	}		
-	
+	}
+
 }
 
 /* Extra Small Devices Styles Starts */
@@ -157,20 +160,20 @@
 
 /* Responsive Image Styles Starts */
 
-	#logo .img-responsive, 
-	.col3-banners .img-responsive, 
-	.col2-banners .img-responsive, 
+	#logo .img-responsive,
+	.col3-banners .img-responsive,
+	.col2-banners .img-responsive,
 	.product-col .img-responsive {
 		margin: 0 auto;
 	}
-	
-/* Cart Style Starts */	
+
+/* Cart Style Starts */
 
 	#cart .btn {
 		padding: 5px 0;
 		text-align: center;
-	}	
-	
+	}
+
 /* Main Menu Styles Starts */
 
 	#main-menu .navbar-toggle {
@@ -185,12 +188,12 @@
 	#main-menu .navbar-collapse {
 		border-top: 1px solid #585858;
 	}
-	#main-menu .dropdown-inner, 
+	#main-menu .dropdown-inner,
 	#main-menu .dropdown-inner ul {
 		display: block;
 	}
-	#main-menu .dropdown-menu, 
-	#main-menu .dropdown-inner, 
+	#main-menu .dropdown-menu,
+	#main-menu .dropdown-inner,
 	#main-menu .dropdown-inner ul {
 		text-align: center;
 	}
@@ -200,7 +203,7 @@
 		ul.header-links {
 			margin-bottom: 10px;
 		}
-		
+
 /* Currency & Languages Drop Down Styles Starts */
 
 		.header-top .pull-left{
@@ -213,13 +216,13 @@
 			.header-top .dropdown-menu {
 				text-align:left;
 			}
-			
+
 /* Main Header Styles Starts */
 
 	.main-header h5 {
 		margin-top: 0;
 	}
-	
+
 /* Logo Style Starts */
 
 	#logo {
@@ -236,24 +239,24 @@
 			float:none;
 			padding:0;
 		}
-		
-/* Product Carousel Styles Starts */	
+
+/* Product Carousel Styles Starts */
 
 	.product-head{
 		font-size:18px;
 	}
-	#owl-product .owl-controls .owl-buttons .owl-prev, 
+	#owl-product .owl-controls .owl-buttons .owl-prev,
 	#owl-product .owl-controls .owl-buttons .owl-next{
 		top:-56px;
 		font-size:20px;
 	}
 	.product-carousel .owl-controls .owl-buttons .owl-prev{
 		left:15px;
-	}	 
+	}
 	.product-carousel .owl-controls .owl-buttons .owl-next{
 		right:20px;
-	}		
-			
+	}
+
 /* Three Column Banner Styles Starts */
 
 	.col3-banners{
@@ -270,37 +273,37 @@
 	}
 		.col2-banners li + li{
 			margin-top:20px;
-		}		
-		
+		}
+
 /* Page Content Styles Starts */
 
 	.page-box h3{
 		margin-top:20px;
-	}		
-	
+	}
+
 /* Tabs Styles Starts */
 
 	.tabs-panel .nav-tabs > li{
 		display:block;
 		float:none;
 	}
-	
+
 /* Pagination Styles Starts */
 
 	.pagination-block{
 		text-align:center;
 	}
 		.pagination{
-			margin-bottom:10px; 
+			margin-bottom:10px;
 		}
 	.results{
 		text-align:center;
 		padding-top:0;
 		margin-bottom:15px;
-	}	
+	}
 
 /* Footer Links Styles Starts */
-	
+
 	.footer-links{
 		text-align:center;
 	}
@@ -312,7 +315,7 @@
 	}
 
 /* Copyright Styles Starts */
-	
+
 	.copyright{
 		font-size:11px;
 	}
@@ -323,12 +326,12 @@
 			.copyright li{
 				padding:0 2px;
 			}
-			
+
 /* Genric Styles Starts */
 
 	.img-center-xs{
 		margin-left:auto;
 		margin-right:auto;
-	}			
-	
+	}
+
 }
